--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,13 +15,13 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background-color: #949494; /* Set the color of the scrollbar handle */
+    background-color: #FD3F46; /* Set the color of the scrollbar handle */
     border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #949494; /* Set the color of the scrollbar handle on hover */
+    background-color: #FD3F46; /* Set the color of the scrollbar handle on hover */
 }
 
 ::-webkit-scrollbar-track {
@@ -92,4 +92,5 @@ border-top:#FF8B00 solid 4px;
     position: fixed;
     bottom: 20px;
     right: 20px;
+    z-index: 5;
 }
